Fixed line spacing in HTML and added pointer to buttons

--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,7 @@ p {
     margin: 0 auto;
 }
 
+/* header */
 .header{
     display:flex;
     flex-flow: row wrap;
@@ -95,6 +96,18 @@ p {
     text-decoration: none;
     color:#000;
     text-transform: capitalize;
+}
+
+.about{
+    border-bottom: 3px dotted black;
+}
+
+.about h3{
+    text-transform: capitalize;
+}
+
+.about p{
+    margin-bottom: 20px;
 }
 
 .top-content {
@@ -191,18 +204,6 @@ p {
     padding-right: 0;
 }
 
-.about{
-    border-bottom: 3px dotted black;
-}
-
-.about h3{
-    text-transform: capitalize;
-}
-
-.about p{
-    margin-bottom: 20px;
-}
-
 .main{
     display:flex;
     flex-flow:row wrap;
@@ -226,6 +227,7 @@ p {
     border-radius: 15px;
     margin-bottom: 10px;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 .lets-work{
@@ -235,6 +237,8 @@ p {
 .lets-work h3{
     margin-bottom: 20px;
 }
+
+/* footer */
 
 footer {
     width: 100%;
